new changes for push notification

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,9 +150,7 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services-gcm:16.1.0'
-    compile 'com.google.android.gms:play-services-location:16.0.0'
-    compile project(':react-native-pushe')
+    compile project(':react-native-push-notification')
     compile project(':react-native-device-info')
     compile project(':react-native-restart-android')
     compile project(':react-native-view-shot')
@@ -162,7 +160,6 @@ dependencies {
                 force = true
             }
     }
-    compile project(':react-native-restart')
     compile project(':react-native-vector-icons')
     compile project(':react-native-linear-gradient')
     implementation fileTree(dir: "libs", include: ["*.jar"])
